--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -69,7 +69,7 @@ build_android_apk:
     #  - name: docker:20.10.16-dind
   #  stage: build
   script: |
-    docker build -f docker/Dockerfile.android -t fluffy-android .
+    docker build -f docker/Dockerfile.android -t fluffy-android --build-arg CI_JOB_TOKEN=$CI_JOB_TOKEN --build-arg CI_COMMIT_SHA=$CI_COMMIT_SHA .
     docker create --name androidimage fluffy-android
     docker cp androidimage:fluffychat/build/app/outputs/flutter-apk/app-debug.apk .
     docker rm androidimage
