--- a/docker/Dockerfile.android
+++ b/docker/Dockerfile.android
@@ -1,5 +1,8 @@
 FROM debian:bullseye-slim
 
+ARG CI_COMMIT_SHA
+ARG CI_JOB_TOKEN
+
 ENV FLUTTER_VERSION=3.3.2
 
 RUN echo 'deb http://deb.debian.org/debian bullseye-backports main' >> /etc/apt/sources.list
@@ -10,8 +13,9 @@ RUN export ANDROID_HOME=/usr/lib/android-sdk
 RUN yes | sdkmanager --licenses
 RUN curl -s https://storage.googleapis.com/flutter_infra_release/releases/stable/linux/flutter_linux_${FLUTTER_VERSION}-stable.tar.xz | tar xfJ - -C /tmp
 ENV PATH=${PATH}:/tmp/flutter/bin
-RUN git clone https://gitlab.com/famedly/fluffychat.git/
+RUN git clone https://gitlab-ci-token:$CI_JOB_TOKEN@git.fairkom.net/clients/rlp/client/fluffychat.git
 WORKDIR ./fluffychat
+RUN git checkout $CI_COMMIT_SHA
 
 RUN sdkmanager \
   "tools" \
