--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,7 @@ variables:
   before_script:
     - curl -s https://storage.googleapis.com/flutter_infra_release/releases/stable/linux/flutter_linux_${FLUTTER_VERSION}-stable.tar.xz | tar xfJ - -C /tmp
     - export PATH="$PATH:/tmp/flutter/bin"
+    - sed -i "s#git@git.fairkom.net:#https://gitlab-ci-token:$CI_JOB_TOKEN@git.fairkom.net/#g" pubspec.yaml
     - flutter pub get
     - flutter pub run import_sorter:main --no-comments --exit-if-changed
     - flutter format lib/ test/ --set-exit-if-changed
@@ -50,6 +51,7 @@ build_web:
   extends:
     - .prepare_flutter
   script: |
+    sed -i "s#git@git.fairkom.net:#https://gitlab-ci-token:$CI_JOB_TOKEN@git.fairkom.net/#g" pubspec.yaml
     ./scripts/prepare-web.sh # FIXME
     flutter config --enable-web
     flutter clean
@@ -68,6 +70,7 @@ build_web_profile:
   extends:
     - .prepare_flutter
   script: |
+    sed -i "s#git@git.fairkom.net:#https://gitlab-ci-token:$CI_JOB_TOKEN@git.fairkom.net/#g" pubspec.yaml
     ./scripts/prepare-web.sh #FIXME
     flutter config --enable-web
     flutter clean
