--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,10 @@ dependencies:
   emojis: ^0.9.0
   encrypt: ^5.0.1
   #fcm_shared_isolate: ^0.1.0
-  file_picker_cross: ^4.6.0
+  file_picker_cross:
+    git:
+      url: git@git.fairkom.net:clients/rlp/client/file_picker_cross.git
+      ref: e9605a1020be3f54a76687433701f99611e6eee4
   flutter:
     sdk: flutter
   flutter_app_badger: ^1.3.0
@@ -40,7 +43,10 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_map: ^2.2.0
-  flutter_matrix_html: ^1.1.0
+  flutter_matrix_html:
+    git:
+      url: git@git.fairkom.net:clients/rlp/client/flutter_matrix_html.git
+      ref: abfadec795817a53688369e8e3ba4fb3500a1916
   flutter_olm: ^1.2.0
   flutter_openssl_crypto: ^0.1.0
   flutter_ringtone_player: ^3.1.1
@@ -60,10 +66,15 @@ dependencies:
   just_audio: ^0.9.20
   keyboard_shortcuts: ^0.1.4
   latlong2: ^0.8.1
-  matrix: ^0.15.4
+  matrix:
+    git:
+      url: git@git.fairkom.net:clients/rlp/client/famedlysdk.git
   matrix_homeserver_recommendations: ^0.3.0
   matrix_link_text: ^1.0.2
-  native_imaging: ^0.1.0
+  native_imaging:
+    git:
+      url: https://gitlab.com/famedly/company/frontend/libraries/native_imaging.git
+      ref: 60b46089f20e99f989cd2735573b12bab345103d
   package_info_plus: ^1.3.0
   path_provider: ^2.0.9
   permission_handler: ^10.0.0
