--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,9 @@
 variables:
   FLUTTER_VERSION: 3.3.8
 
-stages:
-  - build
-  - analyze
+#stages:
+#  - build
+#  - analyze
 #  - upload #FIXME upload webbuild and android package
 
 # fetch and extract flutter
@@ -22,22 +22,19 @@ stages:
     - flutter format lib/ test/ --set-exit-if-changed
 
 flutter_analyze:
-  stage: analyze
+  #stage: analyze
   extends:
     - .flutter_deps_and_format
   script: [flutter analyze]
 
 dart_code_metrics_analyze:
-  stage: analyze
+  #stage: analyze
   extends:
     - .flutter_deps_and_format
   script: ['flutter pub run dart_code_metrics:metrics lib -r gitlab > code-quality-report.json']
   artifacts:
     reports:
       codequality: code-quality-report.json
-  tags:
-    - docker
-    - famedly
 
 #widget_test:
 #  stage: test
@@ -49,7 +46,7 @@ dart_code_metrics_analyze:
 #  script: [flutter test]
 
 build_web:
-  stage: build
+  #stage: build
   extends:
     - .prepare_flutter
   script: |
@@ -67,7 +64,7 @@ build_web:
       - build/web/webbuild.zip
 
 build_web_profile:
-  stage: build
+  #stage: build
   extends:
     - .prepare_flutter
   script: |
@@ -85,7 +82,7 @@ build_web_profile:
       - build/web/webbuild.zip
 
 build_android_apk:
-  stage: build
+  #stage: build
   tags: [docker]
   script: |
     docker build -f docker/Dockerfile.android -t fluffy-android --build-arg CI_JOB_TOKEN=$CI_JOB_TOKEN --build-arg CI_COMMIT_SHA=$CI_COMMIT_SHA .
