--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ flutter_analyze:
   #stage: analyze
   extends:
     - .flutter_deps_and_format
-  script: [flutter analyze]
+  script: [flutter analyze --no-fatal-infos]
 
 dart_code_metrics_analyze:
   #stage: analyze
