--- a/config.sample.json
+++ b/config.sample.json
@@ -1,8 +1,8 @@
 {
-  "application_name": "FluffyChat",
+  "application_name": "Klassenfunk",
   "application_welcome_message": null,
-  "default_homeserver": "matrix.org",
-  "web_base_url": "https://fluffychat.im/web",
+  "default_homeserver": "fairmatrix.net",
+  "web_base_url": "https://web.rlp.fairmatrix.net/web",
   "privacy_url": "https://fluffychat.im/en/privacy.html",
   "render_html": false,
   "hide_redacted_events": false,
